@@ -135,6 +135,7 @@ SVNSLC_SHOWINCOMPLETE|SVNSLC_SHOWEXTERNAL|SVNSLC_SHOWINEXTERNALS)
 #define SVNSLC_POPBLAME					0x00100000
 #define SVNSLC_POPCREATEPATCH			0x00200000
 #define SVNSLC_POPCHECKFORMODS			0x00400000
+#define SVNSLC_POPREPAIRCOPY			0x00800000
 
 #define SVNSLC_IGNORECHANGELIST			_T("ignore-on-commit")
 
